--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.7.0",
+    "lru-cache": "^11.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "@types/node": "^22.x",
+    "typescript": "^5.8.2",
+    "rimraf": "^6.0.1"
   },
   "main": "dist/src/{index.js,functions/*.js}"
 }
