Implement JSON data storage in Azure Table Storage with UUID generation and update README

--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/data-tables": "^13.3.0",
     "@azure/functions": "^4.7.0",
-    "lru-cache": "^11.1.0"
+    "lru-cache": "^11.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.x",
-    "typescript": "^5.8.2",
-    "rimraf": "^6.0.1"
+    "@types/uuid": "^10.0.0",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.8.2"
   },
   "main": "dist/src/{index.js,functions/*.js}"
 }
