--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/data-tables": "^13.3.0",
+    "@azure/storage-blob": "^12.27.0",
     "@azure/functions": "^4.7.0",
     "lru-cache": "^11.1.0",
     "uuid": "^11.1.0"
